--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand logo" href="#">skAItch</a>
 
-
-        </div>
-    </nav>
     <div class="homebar">
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Beta version!</strong> I need your help if you find any bug or required any additional futures give
+            a feedback <a class="btn btn-outline-danger" href="mailto: chandusurisetty11@gmail.com">WRITE ME AN EMAIL
+                📧</a>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <div class="homebar">
 
             <h1 class="headertext">sk<span>AI</span>ch</h1>
