--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .homebar {
     text-align: center;
-    margin: 2rem 0;
+
 
 }
 
@@ -38,7 +38,7 @@ body {
 
 
 .card {
-    width: 40vw;
+    width: 500px;
     margin: auto;
 }
 
@@ -68,4 +68,10 @@ body {
     width: 100%;
     height: 100%;
 
+}
+
+@media (max-width:500px) {
+    .card {
+        width: 95%;
+    }
 }
