--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <div class="homebar">
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Beta version!</strong> I need your help if you find any bug or required any additional futures give
+            <strong>Beta version!</strong> I need your help if you find any bug or required any additional future give
             a feedback <a class="btn btn-outline-danger" href="mailto: chandusurisetty11@gmail.com">WRITE ME AN EMAIL
                 📧</a>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
