--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,13 +50,26 @@ body {
     width: 85%;
     border-radius: 5px;
     border: 1px solid red;
-    margin-right: 1rem;
+
 
 }
+
 
 .formbar button {
     border-radius: 5px;
     background-color: bisque;
+}
+
+.clickbtns {
+    margin-top: 1rem;
+}
+
+.dbtn {
+    text-decoration: none;
+    color: antiquewhite;
+    background-color: red;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .imgbar {
