--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
                         <button type="submit">Create</button>
                         {%if isImg==False%}
 
-                        <a class="dbtn" href="static/img/butterfly.jpg" download=""> Download</a>
+                        <a class="dbtn" href="static/img/butterfly.jpg" download="AIimage"> Download</a>
                         {%else%}
-                        <a class="dbtn" href="static/img/aiImg.jpg" download=""> Download</a>
+                        <a class="dbtn" href="static/img/aiImg.jpg" download="AIimage"> Download</a>
                         {%endif%}
                     </div>
                 </form>
